src/libpumpkin/pumpkin_syscall.h

inline void EvtGetEvent(EventType *event, Int32 timeout) {
  pumpkin_system_call_p(sysTrapEvtGetEvent, 0, NULL, NULL, event, timeout);
}
inline Boolean FrmDispatchEvent(EventType *eventP) {
  uint64_t iret;
  pumpkin_system_call_p(sysTrapFrmDispatchEvent, 0, &iret, NULL, eventP);
  return (Boolean)iret;
}
inline void FrmDrawForm(FormType *formP) {
  pumpkin_system_call_p(sysTrapFrmDrawForm, 0, NULL, NULL, formP);
}
inline FormType *FrmGetActiveForm(void) {
  void *pret;
  pumpkin_system_call_p(sysTrapFrmGetActiveForm, 0, NULL, &pret);
  return (FormType *)pret;
}
inline void FrmGotoForm(UInt16 formId) {
  pumpkin_system_call_p(sysTrapFrmGotoForm, 0, NULL, NULL, formId);
}
inline FormType *FrmInitForm(UInt16 rscID) {
  void *pret;
  pumpkin_system_call_p(sysTrapFrmInitForm, 0, NULL, &pret, rscID);
  return (FormType *)pret;
}
inline void FrmSetActiveForm(FormType *formP) {
  pumpkin_system_call_p(sysTrapFrmSetActiveForm, 0, NULL, NULL, formP);
}
inline void FrmSetEventHandler(FormType *formP, FormEventHandlerType *handler) {
  pumpkin_system_call_p(sysTrapFrmSetEventHandler, 0, NULL, NULL, formP, handler);
}
inline Boolean MenuHandleEvent(MenuBarType *menuP, EventType *event, UInt16 *error) {
  uint64_t iret;
  pumpkin_system_call_p(sysTrapMenuHandleEvent, 0, &iret, NULL, menuP, event, error);
  return (Boolean)iret;
}
inline Boolean SysHandleEvent(EventPtr eventP) {
  uint64_t iret;
  pumpkin_system_call_p(sysTrapSysHandleEvent, 0, &iret, NULL, eventP);
  return (Boolean)iret;
}