src/libpumpkin/pumpkin.h

UInt32 pumpkin_get_app_creator(void);
int pumpkin_script_global_function(int pe, char *name, int (*f)(int pe));
int pumpkin_script_global_function_data(int pe, char *name, int (*f)(int pe, void *data), void *data);
int pumpkin_script_obj_function(int pe, script_ref_t obj, char *name, int (*f)(int pe));
void AbtShowAboutPumpkin(UInt32 creator);